# boiler

./: .gitignore  Dockerfile  README.md  boiler.yaml  docker-compose.yaml  main.py  pyproject.toml
src/: bot.py  main.py
src/commands/: boiler.py  framemog.py
