[project]
name = "discord-boil-bot"
version = "1.0.0"
description = "A Discord bot that boils user profile pictures"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"